--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>info.swegroup</groupId>
-  <artifactId>passwordstore</artifactId>
-  <version>1</version>
+  <groupId>info.fcrp.keepitsafe</groupId>
   <packaging>war</packaging>
-  <name>Password Store</name>
+  <name>KeepIt Safe</name>
   <description>A password store facility</description>
   <dependencies>
   	<dependency>
@@ -70,5 +68,17 @@
   		<artifactId>commons-codec</artifactId>
   		<version>1.5</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-web</artifactId>
+  		<version>3.0.6.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-webmvc</artifactId>
+  		<version>3.0.6.RELEASE</version>
+  	</dependency>
   </dependencies>
+  <artifactId>keepitsafe</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
 </project>
