--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,6 @@
   <dependencies>
   	<dependency>
   		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-core</artifactId>
-  		<version>3.6.8.Final</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.hibernate</groupId>
   		<artifactId>hibernate-annotations</artifactId>
   		<version>3.5.6-Final</version>
   	</dependency>
@@ -31,11 +26,12 @@
   		<artifactId>spring-context</artifactId>
   		<version>3.0.6.RELEASE</version>
   	</dependency>
-  	<dependency>
+  	<!-- <dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-hibernate3</artifactId>
   		<version>2.0.8</version>
-  	</dependency>
+  		
+  	</dependency>-->
   	<dependency>
   		<groupId>commons-dbcp</groupId>
   		<artifactId>commons-dbcp</artifactId>
@@ -45,11 +41,6 @@
   		<groupId>javassist</groupId>
   		<artifactId>javassist</artifactId>
   		<version>3.12.1.GA</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.faces</groupId>
-  		<artifactId>jsf-api</artifactId>
-  		<version>2.1</version>
   	</dependency>
   	<dependency>
   		<groupId>org.springframework</groupId>
@@ -77,6 +68,16 @@
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
   		<version>3.0.6.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-orm</artifactId>
+  		<version>3.0.6.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>1.6.6</version>
   	</dependency>
   </dependencies>
   <artifactId>keepitsafe</artifactId>
