--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>info.fcrp.keepitsafe</groupId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>info.fcrp.keepitsafe</groupId>
   <packaging>war</packaging>
-  <name>KeepIt Safe</name>
-  <description>A password store facility</description>
-  <dependencies>
+	<name>KeepIt Safe</name>
+	<description>A password store facility</description>
+	<dependencies>
   	<dependency>
   		<groupId>org.hibernate</groupId>
   		<artifactId>hibernate-annotations</artifactId>
@@ -26,12 +27,21 @@
   		<artifactId>spring-context</artifactId>
   		<version>3.0.6.RELEASE</version>
   	</dependency>
-  	<!-- <dependency>
+    <dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-hibernate3</artifactId>
   		<version>2.0.8</version>
-  		
-  	</dependency>-->
+  		<exclusions>
+  			<exclusion>
+  				<artifactId>commons-logging</artifactId>
+  				<groupId>commons-logging</groupId>
+  			</exclusion>
+  			<exclusion>
+  				<artifactId>hibernate</artifactId>
+  				<groupId>org.hibernate</groupId>
+  			</exclusion>
+  		</exclusions>
+  	</dependency>
   	<dependency>
   		<groupId>commons-dbcp</groupId>
   		<artifactId>commons-dbcp</artifactId>
@@ -52,7 +62,6 @@
   		<groupId>hsqldb</groupId>
   		<artifactId>hsqldb</artifactId>
   		<version>1.8.0.10</version>
-  		<scope>test</scope>
   	</dependency>
   	<dependency>
   		<groupId>commons-codec</groupId>
@@ -78,6 +87,11 @@
   		<groupId>org.slf4j</groupId>
   		<artifactId>slf4j-api</artifactId>
   		<version>1.6.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.jackson</groupId>
+  		<artifactId>jackson-mapper-asl</artifactId>
+  		<version>1.9.8</version>
   	</dependency>
   </dependencies>
   <artifactId>keepitsafe</artifactId>
