--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name>keepitsafe</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+  <display-name>KeepIt Safe</display-name>
+    <!-- 
+	<context-param>  
+    	<param-name>contextConfigLocation</param-name>  
+        <param-value>classpath:config.xml</param-value>  
+  	</context-param>   
   
-  <servlet>
+  	<listener>  
+    	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
+	</listener> 
+  	<filter>  
+        <filter-name>openSessionInViewFilter</filter-name>  
+        <filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
+         <init-param>
+            <param-name>sessionFactoryBeanName</param-name>
+            <param-value>sessionFactory</param-value>
+        </init-param>  
+  	</filter>  
+      
+  	<filter-mapping>  
+        <filter-name>openSessionInViewFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+  	</filter-mapping> -->
+  	 
+  	<servlet>
     	<servlet-name>spring</servlet-name>
     	<servlet-class>
         	org.springframework.web.servlet.DispatcherServlet
     	</servlet-class>
     	<init-param>
         	<param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/classes/config.xml</param-value>
+            <param-value>classpath:config.xml</param-value>
     	</init-param>
     	<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
     	<servlet-name>spring</servlet-name>
-    	<url-pattern>*.html</url-pattern>
+    	<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+	
+	
+	  
 </web-app>
